--- a/app/12sale/views/sellinggroupinfo.html
+++ b/app/12sale/views/sellinggroupinfo.html
@@ -1,52 +1,48 @@
 
-<div class="col-xs-10 col-xs-offset-1">
-	<div class="panel panel-default form-horizontal">
-		<div class="panel-heading">
-			游客信息
-		</div>
-		<div class="panel-body">
-			<div class="container-fluid">
-				<div class="col-xs-12" style="margin-bottom:10px;margin-top:-20px;">
-					<h3><span class="label label-info">正价人数：{{zhengjiars}}人</span>&nbsp;&nbsp;&nbsp;&nbsp;
-					<span class="label label-info">补贴人数：{{butiers}}人</span>&nbsp;&nbsp;&nbsp;&nbsp;
-					<span class="label label-info">总价：{{all_price * 0.01  | currency : '￥'}}</span>
-					&nbsp;&nbsp;&nbsp;
-					<a ng-click="signup()" class="btn btn-success pull-right">继续报名</a>
-					</h3>
-
-
-				</div>
-				<div class="col-xs-12" >
-
-					<table class="table table-bordered">
-					    <thead>
-					      <tr>
-					      	<th class="col-md-1 text-center">批次</th>
-					      	<th class="col-md-3 text-center">商品名称</th>
-					        <th class="col-md-1 text-center">游客姓名</th>
-					        <th class="col-md-2 text-center">游客电话</th>
-					        <th class="col-md-2 text-center">使用补贴</th>
-					        <th class="col-md-2 text-center">支付金额</th>
-					        <th class="col-md-1 text-center">操作</th>
-					      </tr>
-					    </thead>
-					    <tbody>
-					      <tr ng-repeat="obj in objs">
-					      	<td class="text-center">第{{obj.batches}}批</td>
-					      	<td class="text-center">{{obj.goods_name}}</td>
-					        <td class="text-center">{{obj.name}}</td>
-					        <td class="text-center">{{obj.mobile}}</td>
-					        <td class="text-center">{{obj.usedsubsidy * 0.01  | currency : '￥'}}</td>
-					        <td class="text-center">{{obj.pay_price * 0.01  | currency : '￥'}}</td>
-					        <td class="text-center">
-					          <a ng-click="back(obj.id)" class="btn btn-warning btn-xs">退订</a>
-					        </td>
-					      </tr>
-					    </tbody>
-					</table>
-
-				</div>
-			</div>
-		</div>
+	<div class="modal-header">
+	    <h4 class="modal-title">游客信息</h4>
 	</div>
-</div>
+	<div class="modal-body">
+		<div class="container-fluid">
+			<div class="col-xs-12" style="margin-bottom:10px;margin-top:-20px;">
+				<h3><span class="label label-info">正价人数：{{zhengjiars}}人</span>&nbsp;&nbsp;&nbsp;&nbsp;
+				<span class="label label-info">补贴人数：{{butiers}}人</span>&nbsp;&nbsp;&nbsp;&nbsp;
+				<span class="label label-info">总价：{{all_price * 0.01  | currency : '￥'}}</span>
+				<!-- &nbsp;&nbsp;&nbsp;
+				<a ng-click="signup()" class="btn btn-success pull-right">继续报名</a> -->
+				</h3>
+			</div>
+
+		</div>
+		<table class="table table-bordered">
+		    <thead>
+		      <tr>
+		      	<th class="col-md-1 text-center">批次</th>
+		      	<th class="col-md-3 text-center">商品名称</th>
+		        <th class="col-md-1 text-center">姓名</th>
+		        <th class="col-md-2 text-center">电话</th>
+		        <th class="col-md-2 text-center">使用补贴</th>
+		        <th class="col-md-2 text-center">支付金额</th>
+		        <th class="col-md-1 text-center">操作</th>
+		      </tr>
+		    </thead>
+		    <tbody>
+		      <tr ng-repeat="obj in objs">
+		      	<td class="text-center">第{{obj.batches}}批</td>
+		      	<td class="text-center">{{obj.goods_name}}</td>
+		        <td class="text-center">{{obj.name}}</td>
+		        <td class="text-center">{{obj.mobile}}</td>
+		        <td class="text-center">{{obj.usedsubsidy * 0.01  | currency : '￥'}}</td>
+		        <td class="text-center">{{obj.pay_price * 0.01  | currency : '￥'}}</td>
+		        <td class="text-center">
+		          <a ng-click="back(obj.id)" class="btn btn-warning btn-xs">退订</a>
+		        </td>
+		      </tr>
+		    </tbody>
+		</table>
+
+	</div>
+	<div class="modal-footer">
+	    <button class="btn btn-warning" type="button" ng-click="cancel()">返回</button>
+	</div>
+
