--- a/app/12sale/views/sellinggroupmodel.html
+++ b/app/12sale/views/sellinggroupmodel.html
@@ -1,9 +1,22 @@
-<div class="col-xs-10 col-xs-offset-1 form-horizontal" >
+	<div class="panel panel-default form-horizontal">
+		<div class="panel-heading">
+			基本信息
+			<button type="button" 
+				class="btn btn-xs btn-info pull-right"
+				ng-click="gogo()"
+			>
+				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+			</button>
+
+		</div>
+		<div class="panel-body">
+			<div class="container-fluid">
+
 
 	<div class="form-group">
-		<label class="col-xs-2 control-label">预计人数</label>
+		<label class="col-xs-2 control-label">计划人数</label>
 		<div class="col-xs-6">
-			<input type="number" class="form-control" placeholder="请输入预计人数"
+			<input type="number" class="form-control" placeholder="请输入计划人数"
 			ng-model="groupobj.plan_count"
 			>
 		</div>
@@ -90,13 +103,10 @@
 		</div>
 	</div>
 
-	<button 
-    type="button" 
-    class="btn btn-primary btn-lg btn-block" 
-    ng-click="gogo()"
-    >
-    提交
-    </button>
+
+			</div>
+
+		</div>
+	</div>
 
 
-</div>
