重发短信按钮现实状态

--- a/app/13order/views/list.html
+++ b/app/13order/views/list.html
@@ -98,7 +98,9 @@
           has-permission='orderinfo' 
           >订单详情</a>
           <br>
-          <a ng-click="resend(obj)" class="btn btn-danger btn-xs">重发短信</a>
+          <a ng-click="resend(obj)" class="btn btn-danger btn-xs"
+          ng-show="obj.ticket_state == '2' && obj.sms_state == '2'"
+          >重发短信</a>
           
         </th>
       </tr>
