团订单列表

--- a/app/12sale/views/sellinggroup.html
+++ b/app/12sale/views/sellinggroup.html
@@ -32,11 +32,11 @@
 	    <thead>
 	      <tr>
 	        <th class="col-md-2 text-center">出游信息</th>
-	        <th class="col-md-2 text-center">预定团票</th>
+	        <th class="col-md-3 text-center">预定团票</th>
 	        <th class="col-md-2 text-center">导游信息</th>
 	        <th class="col-md-2 text-center">备注</th>
-	        <th class="col-md-1 text-center">最后操作时间</th>
-	        <th class="col-md-1 text-center">最后操作人</th>
+	        <th class="col-md-1 text-center">最后操作</th>
+	        <!-- <th class="col-md-1 text-center">最后操作人</th> -->
 	        <th class="col-md-2 text-center">操作</th>
 	      </tr>
 	    </thead>
@@ -48,23 +48,30 @@
 	        	实际人数：[{{obj.actual_count}}人]<br>
 	        	到达时间：[{{obj.arrival_date}}]
 	        </td>
-	        <td class="">{{obj.order_name}}</td>
+	        <td class="">
+	        	{{obj.order_name}}<br>
+	        	[订单编号][{{obj.code}}]
+	        </td>
 	        <td class="text-center">
 	        	[{{obj.guide_name}}]<br>
 	        	[{{obj.guide_mobile}}]<br>
-	        	[{{obj.vehicle_number}}]
+	        	[{{obj.vehicle_number}}]<br>
+	        	[团票码][{{obj.ticket_code}}]
 	        </td>
 	        <td class="text-center">{{obj.remark}}</td>
-	        <td class="text-center">{{obj.update_time}}</td>
-	        <td class="text-center">{{obj.update_by}}</td>
+	        <td class="text-center">
+	        	{{obj.update_by}}<br>
+	        	{{obj.update_time}}
+
+	        </td>
+	       <!--  <td class="text-center">{{obj.update_by}}</td> -->
 			<td class="text-center">
 				<div ng-show="obj.state=='0' && obj.xx=='0'">
 					<a ng-click="signup(obj.code)" class="btn btn-warning btn-sm">报名</a>
-					<a ng-click="info(obj.code)" class="btn btn-primary btn-sm">报名详情</a>
 					<a ng-click="edit(obj.code)" class="btn btn-success btn-sm">编辑</a>
-					<a ng-click="detail(obj.code)" class="btn btn-info btn-sm">修改纪录</a>
-			        <!-- <a ng-click="del(obj.code)" class="btn btn-danger btn-sm">删除</a> -->
 		        </div>
+		        <a ng-click="info(obj.code)" class="btn btn-primary btn-sm">报名详情</a>
+		        <a ng-click="detail(obj.code)" class="btn btn-info btn-sm">修改纪录</a>
 	        </td>
 	      </tr>
 	    </tbody>
