--- a/app/03doc/views/name.html
+++ b/app/03doc/views/name.html
@@ -17,6 +17,7 @@
 				<option value="product"> 产品 </option>
 				<option value="order"> 订单 </option>
 				<option value="instructions"> 接口调用说明 </option>
+				<option value="user"> 用户 </option>
 			</select>
 
 		</div>
