--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -140,6 +140,17 @@
 						</div>
 					</div>
 
+					<div class="form-group">
+					    <label class="col-xs-3 control-label">产品所属</label>
+					    <div class="col-xs-9" >
+							<select class="form-control" ng-model="saleobj.sale_belong" 
+							  ng-disabled="saleobj.id != ''"
+				              ng-options="sale_belong.value as sale_belong.label for sale_belong in sale_belongarr"
+				            >
+				            </select>
+						</div>
+				  	</div>
+
 				  	<div class="form-group">
 					    <label class="col-xs-3 control-label">系统确认</label>
 					    <div class="col-xs-9">
