--- a/app/12sale/views/sellinggroupinfo.html
+++ b/app/12sale/views/sellinggroupinfo.html
@@ -35,7 +35,9 @@
 		        <td class="text-center">{{obj.usedsubsidy * 0.01  | currency : '￥'}}</td>
 		        <td class="text-center">{{obj.pay_price * 0.01  | currency : '￥'}}</td>
 		        <td class="text-center">
-		          <a ng-click="back(obj.id)" class="btn btn-warning btn-xs">退订</a>
+		        	<div ng-show="obj.backstate=='0'">
+		          		<a ng-click="back(obj.id)" class="btn btn-warning btn-xs">退订</a>
+	          		</div>
 		        </td>
 		      </tr>
 		    </tbody>
