--- a/app/13order/views/list.html
+++ b/app/13order/views/list.html
@@ -87,7 +87,11 @@
         <td class="">{{obj.title}}</td>
         <td class="text-center"><br>{{obj.code}}</td>
         <td class="text-center">{{obj.name}}<br>{{obj.mobile}}<br>{{obj.cardno}}</td>
-        <td class="text-center">购买{{obj.num}}<br>退票{{obj.back}}<br>使用{{obj.used}}</td>
+        <td class="text-center">
+          <span>购买{{obj.num}}</span><br>
+          <span ng-show="obj.sale_belong != 'langdao'">退票{{obj.back}}</span><br>
+          <span ng-show="obj.sale_belong != 'langdao'">使用{{obj.used}}</span>
+        </td>
         <td class="text-center">{{obj.create_time}}</td>
         <td class="text-center"><br>{{obj.ticket_state_name}}</td>
         <td class="text-center">{{obj.company_name}}<br>{{obj.company_code}}<br>{{obj.operation_login_name}}</td>
@@ -99,7 +103,7 @@
           >订单详情</a>
           <br>
           <a ng-click="resend(obj)" class="btn btn-danger btn-xs"
-          ng-show="obj.ticket_state == '2' && obj.sms_state == '2'"
+          ng-show="obj.sale_belong != 'juyou' || (obj.ticket_state == '2' && obj.sms_state == '2')"
           >重发短信</a>
           
         </th>
