--- a/app/13order/views/list.html
+++ b/app/13order/views/list.html
@@ -89,7 +89,7 @@
         <td class="text-center">{{obj.name}}<br>{{obj.mobile}}<br>{{obj.cardno}}</td>
         <td class="text-center">
           <span>购买{{obj.num}}</span><br>
-          <span ng-show="obj.sale_belong != 'langdao'">退票{{obj.back}}</span><br>
+          <span>退票{{obj.back}}</span><br>
           <span ng-show="obj.sale_belong != 'langdao'">使用{{obj.used}}</span>
         </td>
         <td class="text-center">{{obj.create_time}}</td>
