--- a/app/13order/views/orderticketlist.html
+++ b/app/13order/views/orderticketlist.html
@@ -60,6 +60,40 @@
         </div>
 
 
+
+
+        <div class="panel panel-primary" >
+          <!-- Default panel contents -->
+          <div class="panel-heading">退票历史
+          </div>
+
+          <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th class="col-md-2 text-center">申请时间</th>
+                <th class="col-md-2 text-center">确认时间</th>
+                <th class="col-md-2 text-center">退票状态</th>
+                <th class="col-md-2 text-center">退票数量</th>
+                <th class="col-md-2 text-center">退票金额</th>
+                <th class="col-md-2 text-center">退票机构</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr ng-repeat="back in backarr">
+                <td class="text-center">{{back.create_time}}</td>
+                <td class="text-center">{{back.update_time}}</td>
+                <td class="text-center">{{back.back_statename}}</td>
+                <td class="text-center">{{back.back_count}}</td>
+                <td class="text-center">{{back.back_price * 0.01 | currency : '¥'}}</td>
+                <td class="text-center">{{back.ta_code}}</td>
+
+              </tr>
+            </tbody>
+          </table>
+          
+        </div>
+
+
         </div>
     </div>
 </div>
