--- a/app/13order/views/grouplist.html
+++ b/app/13order/views/grouplist.html
@@ -47,22 +47,37 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="col-md-3 text-center">订单名称</th>
-        <th class="col-md-1 text-center">订单编号</th>
+        <th class="col-md-3 text-center">订单信息</th>
         <th class="col-md-2 text-center">出游信息</th>
-        <th class="col-md-3 text-center">导游信息</th>
+        <th class="col-md-2 text-center">导游信息</th>
         <th class="col-md-2 text-center">备注</th>
-        <th class="col-md-1 text-center">下单时间</th>
+        <th class="col-md-2 text-center">下单时间</th>
+        <th class="col-md-1 text-center">操作</th>
       </tr>
     </thead>
     <tbody>
       <tr ng-repeat="obj in objs">
-        <td class="">{{obj.order_name}}</td>
-        <td class="text-center">{{obj.code}}</td>
-        <td class="text-center">[{{obj.book_count}}人][{{obj.arrival_date}}][{{obj.ticket_code}}]</td>
-        <td class="text-center">[{{obj.guide_name}}][{{obj.guide_mobile}}][{{obj.vehicle_number}}]</td>
+        <td class="">
+        	{{obj.order_name}}<br>
+        	[订单编号][{{obj.code}}]
+        </td>
+        <td class="text-center">
+        	计划人数：[{{obj.plan_count}}人]<br>
+        	报名人数：[{{obj.book_count}}人]<br>
+        	实际人数：[{{obj.actual_count}}人]<br>
+        	到达时间：[{{obj.arrival_date}}]
+        </td>
+        <td class="text-center">
+        	[{{obj.guide_name}}]<br>
+        	[{{obj.guide_mobile}}]<br>
+        	[{{obj.vehicle_number}}]<br>
+        	[团票码][{{obj.ticket_code}}]
+        </td>
         <td class="text-center">{{obj.remark}}</td>
         <td class="text-center">{{obj.create_time}}</td>
+        <td class="text-center">
+        	<a ng-click="info(obj.code)" class="btn btn-primary btn-sm">报名详情</a>
+        </td>
       </tr>
     </tbody>
   </table>
