--- a/app/12sale/views/saledetail.html
+++ b/app/12sale/views/saledetail.html
@@ -23,6 +23,13 @@
             </div>
 
             <div class="form-group">
+                <label class="col-xs-2 control-label">成本价</label>
+                <div class="col-xs-8">
+                    <p class="form-control-static">{{objs.cost_price * 0.01  | currency : '￥'}}</p>
+                </div>
+            </div>
+
+            <div class="form-group">
                 <label class="col-xs-2 control-label">简介</label>
                 <div class="col-xs-8">
                     <p class="form-control-static">{{objs.detail}}</p>
