--- a/app/13order/views/grouplist.html
+++ b/app/13order/views/grouplist.html
@@ -76,6 +76,7 @@
         <td class="text-center">{{obj.remark}}</td>
         <td class="text-center">{{obj.create_time}}</td>
         <td class="text-center">
+       		<a ng-click="print()" class="btn btn-info btn-sm">打印</a>
         	<a ng-click="info(obj.code)" class="btn btn-primary btn-sm">报名详情</a>
         </td>
       </tr>
