'增加团队统计（景区）功能'

--- a/app/14statistics/views/statisticsgrouplist.html
+++ b/app/14statistics/views/statisticsgrouplist.html
@@ -35,7 +35,7 @@
     <thead>
       <tr>
         <th class="text-center">出游时间</th>
-        <th class="text-center">团票名称</th>
+        <th class="text-center">商品名称</th>
         <th class="text-center">分销商</th>
         <th class="text-center">报名人数</th>
         <th class="text-center">单价</th>
