--- a/app/style/app.css
+++ b/app/style/app.css
@@ -14,6 +14,9 @@ body {
 .mt20{margin-top: 20px;}
 .mt25{margin-top: 25px;}
 .mb10{margin-bottom: 10px;}
+.mb20{margin-bottom: 20px;}
+.ml20{margin-left: 20px;}
+.fl{float:left;}
 
 body { /*padding-bottom: 70px;*/ }
 .navbar-brand{/*padding-top: 5px;*/}
