--- a/app/13order/views/list.html
+++ b/app/13order/views/list.html
@@ -105,6 +105,9 @@
           <a ng-click="resend(obj)" class="btn btn-danger btn-xs"
           ng-show="obj.sale_belong != 'juyou' || (obj.ticket_state == '2' && obj.sms_state == '2')"
           >重发短信</a>
+          <a ng-click="relay(obj)" class="btn btn-warning btn-xs"
+          ng-show="obj.sale_belong == 'juyou' && obj.ticket_state == '2' && obj.sms_state == '2'"
+          >转发短信</a>
           
         </th>
       </tr>
