'修改使用统计功能'

--- a/app/14statistics/views/useddetail.html
+++ b/app/14statistics/views/useddetail.html
@@ -15,7 +15,7 @@
 		      <tr>
 		        <th class="col-md-3 text-center">景区名称</th>
 		        <th class="col-md-3 text-center">商品名称</th>
-		        <th class="col-md-2 text-center">分销商</th>
+		        <th class="col-md-2 text-center">旅行社</th>
 		        <th class="col-md-1 text-center">购票时间</th>
 		        <th class="col-md-1 text-center">操作时间</th>
 		        <th class="col-md-1 text-center">票号</th>
