--- a/app/14statistics/views/statisticssale.html
+++ b/app/14statistics/views/statisticssale.html
@@ -12,6 +12,10 @@
 
                 
               <label>使用时间</label>&nbsp;&nbsp;
+              <select class="form-control" ng-model="searchform.seltype">
+              	<option value="0">小数据（周）</option>
+              	<option value="1">大数据（月）</option>
+        	  </select>&nbsp;&nbsp;
               <div class="input-group">
               <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
                   <span class="input-group-btn">
