--- a/app/07product/views/tktsale.html
+++ b/app/07product/views/tktsale.html
@@ -73,6 +73,7 @@
                 <a ng-show="obj.state=='1'" ng-click="stop(obj.id)" class="btn btn-primary btn-xs">下架</a>
                 <a ng-show="obj.state=='0' || obj.state=='2'" ng-click="start(obj.id)" class="btn btn-danger btn-xs">上架</a>
                 <a ng-click="edit(obj.id)" ng-show="obj.state=='0' || obj.state == '2'" class="btn btn-success btn-xs">编辑</a>
+                <a ng-click="del(obj.id)" ng-show="obj.state=='0' || obj.state == '2'" class="btn btn-danger btn-xs">删除</a>
                 <a ng-show="obj.used_state=='1'" ng-click="usedstart(obj.id)" class="btn btn-primary btn-xs">允许消票</a>
                 <a ng-show="obj.used_state=='0'" ng-click="usedstop(obj.id)" class="btn btn-danger btn-xs">禁止消票</a>
                 <a ng-click="info(obj.id)" ng-show="obj.state == '1'" class="btn btn-warning btn-xs">详情</a>
