--- a/app/12sale/views/sellinggroupmodel.html
+++ b/app/12sale/views/sellinggroupmodel.html
@@ -1,12 +1,6 @@
 	<div class="panel panel-default form-horizontal">
 		<div class="panel-heading">
 			基本信息
-			<button type="button" 
-				class="btn btn-xs btn-info pull-right"
-				ng-click="gogo()"
-			>
-				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-			</button>
 
 		</div>
 		<div class="panel-body">
@@ -103,10 +97,23 @@
 		</div>
 	</div>
 
-
-			</div>
-
+	<div class="form-group">
+		<label class="col-xs-2 control-label">预定须知</label>
+		<div class="col-xs-6">
+			<textarea class="form-control" rows="3"
+			ng-model="groupobj.bookingnotice"
+			></textarea>
 		</div>
 	</div>
+
+
+		</div>
+
+	</div>
+	<div class="modal-footer">
+	    <button class="btn btn-primary" type="button" ng-click="gogo()">提交</button>
+	    <button class="btn btn-warning" type="button" ng-click="cancel()">返回</button>
+	</div>
+</div>
 
 
