--- a/app/12sale/views/sellinggroup.html
+++ b/app/12sale/views/sellinggroup.html
@@ -51,7 +51,7 @@
 	      <tr ng-repeat="obj in objs">
 	        <td class="text-center">
 	        	计划人数：[{{obj.plan_count}}人]<br>
-	        	报名人数：[{{obj.book_count}}人]<br>
+	        	预订人数：[{{obj.book_count}}人]<br>
 	        	实际人数：[{{obj.actual_count}}人]<br>
 	        	到达时间：[{{obj.arrival_date}}]
 	        </td>
