--- a/app/14statistics/views/statisticsgrouplist.html
+++ b/app/14statistics/views/statisticsgrouplist.html
@@ -37,7 +37,7 @@
         <th class="text-center">出游时间</th>
         <th class="text-center">商品名称</th>
         <th class="text-center">分销商</th>
-        <th class="text-center">报名人数</th>
+        <th class="text-center">预订人数</th>
         <th class="text-center">单价</th>
         <th class="text-center">总计</th>
       </tr>
