--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -233,6 +233,15 @@
 				  	</div>
 
 				  	<div class="form-group">
+						<label class="col-xs-3 control-label">团产品-预定须知</label>
+						<div class="col-xs-9">
+							<textarea class="form-control" rows="3"
+							ng-model="saleobj.bookingnotes"
+							></textarea>
+						</div>
+					</div>
+
+				  	<div class="form-group">
 						<label class="col-xs-3 control-label">销售品简介</label>
 						<div class="col-xs-9">
 							<!-- <textarea class="form-control" rows="3"
