'门票使用情况加按商品属性搜索'

--- a/app/14statistics/views/uselist.html
+++ b/app/14statistics/views/uselist.html
@@ -33,6 +33,14 @@
                   </select>
                   &nbsp;&nbsp;
 
+                  <label>属性</label>&nbsp;&nbsp;
+                  <select class="form-control" ng-model="searchform.type_attr">
+                    <option value='01'> 电子票 </option>
+                    <option value='04'> 居游套票 </option>
+                    <option value=''> --全部-- </option>
+                  </select>
+                  &nbsp;&nbsp;
+
                   共 {{bigTotalItems}} 条数据
 
                   &nbsp;&nbsp;
