--- a/app/06deposit/views/trackinfo.html
+++ b/app/06deposit/views/trackinfo.html
@@ -1,45 +1,65 @@
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th class="col-md-1 text-center">类型</th>
-        <th class="col-md-2 text-center">金额</th>
-        <th class="col-md-2 text-center">订单编号</th>
-        <th class="col-md-2 text-center">操作时间</th>
-     <!--    <th class="col-md-2 text-center">操作机构</th>
-        <th class="col-md-2 text-center">操作帐号</th> -->
-        <th class="col-md-5 text-center">备注</th>
+  
+<div class="col-sm-12">
+	<div class="panel panel-default">
+	    <div class="panel-body">
+	        <div class="form-group form-inline">
+	            <div class="col-sm-10">
+	                <label>类型</label>&nbsp;&nbsp;
+	                <select class="form-control" ng-model="searchform.type">
+	                	<option value=''>--全部--</option>
+	                	<option value='4'>预存转移</option>
+	                	<option value='2'>消费</option>
+	                	<option value='3'>退款</option>
+		            </select>
+	                &nbsp;&nbsp;&nbsp;&nbsp;
+	                <button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
+	            </div>
+	        </div>
+	    </div>
+	</div>
+	  <table class="table table-bordered">
+	    <thead>
+	      <tr>
+	        <th class="col-md-1 text-center">类型</th>
+	        <th class="col-md-2 text-center">金额</th>
+	        <th class="col-md-2 text-center">订单编号</th>
+	        <th class="col-md-2 text-center">操作时间</th>
+	     <!--    <th class="col-md-2 text-center">操作机构</th>
+	        <th class="col-md-2 text-center">操作帐号</th> -->
+	        <th class="col-md-5 text-center">备注</th>
 
-      </tr>
-    </thead>
-    <tbody>
-      <tr ng-repeat="obj in objs">
-        <td class="text-center">{{obj.type_name}}</td>
-        <td class="text-center">{{obj.price | currency : '¥'}}</td>
-        <td class="text-center">{{obj.order_code}}</td>
-        <td class="text-center">{{obj.create_time}}</td>
-        <!-- <td class="text-center">{{obj.create_company_code}}</td>
-        <td class="text-center">{{obj.create_login_name}}</td> -->
-        <td class="text-center">{{obj.remarks}}</td>
-      </tr>
-    </tbody>
-  </table>
+	      </tr>
+	    </thead>
+	    <tbody>
+	      <tr ng-repeat="obj in objs">
+	        <td class="text-center">{{obj.type_name}}</td>
+	        <td class="text-center">{{obj.price | currency : '¥'}}</td>
+	        <td class="text-center">{{obj.order_code}}</td>
+	        <td class="text-center">{{obj.create_time}}</td>
+	        <!-- <td class="text-center">{{obj.create_company_code}}</td>
+	        <td class="text-center">{{obj.create_login_name}}</td> -->
+	        <td class="text-center">{{obj.remarks}}</td>
+	      </tr>
+	    </tbody>
+	  </table>
 
 
-  <div class="text-right">
+	  <div class="text-right">
 
-    <uib-pagination 
-      total-items="bigTotalItems" 
-      ng-model="bigCurrentPage" 
-      max-size="maxSize" 
-      class="pagination-sm" 
-      boundary-links="true" 
-      ng-change="load()"
-      items-per-page="itemsPerPage"
-      previous-text="上一页"
-      next-text="下一页"
-      first-text="首页"
-      last-text="末页"
-      rotate="false">
-    </uib-pagination>
+	    <uib-pagination 
+	      total-items="bigTotalItems" 
+	      ng-model="bigCurrentPage" 
+	      max-size="maxSize" 
+	      class="pagination-sm" 
+	      boundary-links="true" 
+	      ng-change="load()"
+	      items-per-page="itemsPerPage"
+	      previous-text="上一页"
+	      next-text="下一页"
+	      first-text="首页"
+	      last-text="末页"
+	      rotate="false">
+	    </uib-pagination>
 
-  </div>
+	  </div>
+</div>
