'多商品统计功能'

--- a/app/14statistics/views/viewlist.html
+++ b/app/14statistics/views/viewlist.html
@@ -38,25 +38,31 @@
   <table class="table table-bordered">
     <thead>
       <tr>
+      	<th class="col-md-1 text-center">
+      		<a ng-click="ok(objs)" class="btn btn-default btn-sm">全选</a>
+      		<a ng-click="cancel(objs)" class="btn btn-default btn-sm">取消</a>
+      	</th>
         <th class="col-md-1 text-center">时间</th>
         <th class="col-md-1 text-center">景区名称</th>
-        <th class="col-md-2 text-center">商品名称</th>
+        <th class="col-md-2 text-center">商品信息</th>
         <!-- <th class="col-md-1 text-center">商品编号</th> -->
         <!-- <th class="col-md-2 text-center">数量</th> -->
         <th class="col-md-1 text-center">购买数量</th>
         <th class="col-md-1 text-center">使用数量</th>
         <th class="col-md-1 text-center">退票数量</th>
         <th class="col-md-1 text-center">政府补贴</th>
-        <th class="col-md-1 text-center">单价</th>
         <th class="col-md-1 text-center">居游结算价</th>
         <th class="col-md-1 text-center">操作</th>
       </tr>
     </thead>
     <tbody>
       <tr ng-repeat="obj in objs">
+      	<td class="text-center">
+      		<input type="checkbox" name="checkname" ng-checked="obj.check" ng-click="clickbox($index)"> 
+      	</td>
         <td class="text-center">{{obj.date}}</td>
         <td class="text-center">{{obj.place_name}}</td>
-        <td class="">{{obj.type_name}}<br>商品编号：{{obj.goods_code}}</td>
+        <td class="">{{obj.type_name}}<br>商品编号：{{obj.goods_code}}<br>商品单价：{{obj.cost_price  * 0.01 | currency : '￥'}}</td>
         <!-- <td class="text-center">{{obj.goods_code}}</td> -->
         <!-- <td class="text-center">
           购买：{{obj.buy}}&nbsp;&nbsp;
@@ -68,8 +74,7 @@
         <td class="text-center">{{obj.back}}</td>
         <td class="text-center">
             {{(subsidy | arrfilter:'goods_code':'govsubsidy_price':obj.goods_code) * 0.01 | currency : '￥'}}
-        </td>
-        <td class="text-center">{{obj.cost_price  * 0.01 | currency : '￥'}}</td>
+        </td>	
         <td class="text-center">{{obj.cost_price * obj.used  * 0.01 | currency : '￥'}}</td>
         <td class="text-center">
         	<a ng-click="detail(obj.view, obj.goods_code)" ng-hide="obj.used == 0" class="btn btn-success btn-sm">使用详情</a>
@@ -77,6 +82,9 @@
       </tr>
 
       <tr >
+      	<td class="text-center">
+      		<a ng-click="goodscount(objs)" class="btn btn-success btn-sm">多商品统计</a>
+      	</td>
         <td class="text-center">总计</td>
         <td class="text-center"></td>
         <td class=""></td>
@@ -84,7 +92,6 @@
         <td class="text-center">{{total.used}}</td>
         <td class="text-center">{{total.back}}</td>
         <td class="text-center">{{total.gov * 0.01 | currency : '￥'}}</td>
-        <td class="text-center"></td>
         <td class="text-center">{{total.total * 0.01 | currency : '￥'}}</td>
         <td class="text-center"></td>
       </tr>
